# dijo

./: CLAUDE.md  Cargo.toml  README.md  dijo.1  groff.err  readme.md
.claude/: session-notes.md
.github/workflows/: ci.yml  main.yml  release.yml
src/: command.rs  main.rs  stats.rs  theme.rs  utils.rs  views.rs
src/app/: cursor.rs  impl_self.rs  impl_view.rs  message.rs  mod.rs
src/habit/: bit.rs  count.rs  float.rs  mod.rs  prelude.rs  traits.rs
