[package]
name = "dijo"
version = "0.2.9"
authors = ["Parham Alvani <parham.alvani@gmail.com>", "Akshay <nerdy@peppe.rs>"]
edition = "2021"
description = "Scriptable, curses-based, digital habit tracker"
homepage = "https://github.com/1995parham/dijo"
repository = "https://github.com/1995parham/dijo"
readme = './readme.md'
keywords = ["tracker", "event-tracker", "tui", "journal"]
categories = ["date-and-time", "command-line-interface"]
license = "MIT"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
erased-serde = "0.4"
typetag = "0.2.20"
directories = "6.0.0"
clap = "4.5"
toml = "0.8.20"
syn = "=2.0.98"

[dependencies.cursive]
version = "0.21"
default-features = false

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[features]
default = ["termion-backend"]
termion-backend = ["cursive/termion-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
